--- a/css/styles.css
+++ b/css/styles.css
@@ -481,6 +481,17 @@ pre {
   }
 }
 
+@media only screen and (max-width: 845px){
+  html, body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
+}
+
+
 /*
 @media (min-width: 576px) {
   .container {
